v0.4.2
  Fix -D option to actually put Blather in debug mode
  Stanzas over a client connection will either have the full JID or no JID
  Regexp guards can be anything that implements #last_match (Regexp or Oniguruma)
  Add "halt" and "pass" to allow handlers to either halt the handler chain or pass to the next handler
  Fix default status handler so it doesn't eat the stanza

v0.4.1
  Bugfix in roster: trying to call the wrong method on client

v0.4.0
  Switch from LibXML-Ruby to Nokogiri
  Update test suite to run on Ruby 1.9
  Add "<<" style writer to the DSL to provide for chaining outbound writes
  SRV lookup support
  Add XPath type of handler guard
  PubSub support

v0.3.4
  Remove unneeded functions from the push parser.
  Create a ParseWarning error that doesn't kill the stream.
  When a parse error comes in the reply should let the other side know it screwed up before dying.
  Add the LibXML::XML::Error node to the ParseError/ParseWarning objects.

v0.3.3
  Fix the load error related to not pushing Blather's dir into the load path

v0.3.2
  Switch the push parser from chunking to streaming.
  Don't push Blather's dir into the load paths

v0.3.1
  Small changes to the DSL due to handler collisions:
    "status" -> "set_status"
    "roster" -> "my_roster"
  Small changes to the Blather::Client API to keep it feeling more like EM's API:
    #stream_started -> #post_init
    #call -> #receive_data
    #stop -> #close
    #stopped -> #unbind
  Refactored some of the code internal to Blather::Client
  Added command line option handler to default use method (see README)
  require libxml-ruby >=1.1.2 (1.1.3 has an inconsistent malloc err on OS X 10.5)
  complete specs
  add single process ping-pong example

v0.3.0
  Remove autotest discover.rb (created all sorts of conflicts)
  Added Hash with Array guard
  Added a hirrarchy printer to examples directory
  Moved Disco to be in the Stanza namespace (staves off deeply namespaced classes)